# smallcage

./: Cargo.toml
src/: drawing.rs  grabs.rs  handlers.rs  input.rs  main.rs  render.rs  shell.rs  state.rs  udev.rs  winit.rs
src/grabs/: normal_move_grab.rs  normal_resize_grab.rs
src/handlers/: compositor.rs  mod.rs  ssd.rs  xdg_shell.rs
src/shell/: elementkeyboard.rs  elementpoint.rs
