[package]
name = "smallcage"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bitflags = "2.4.1"
tracing = "0.1.40"

[dependencies.smithay]
git =  "https://github.com/Smithay/smithay"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
